--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,5 +1,7 @@
 <body>
   <div id="wrapper">
+
+    <!-- main -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="adjust-nav">
         <div class="navbar-header">
@@ -16,90 +18,22 @@
           <a
             style="color:#fff;"
             (click)="signOut()"
-
           >LOGOUT</a>
         </span>
       </div>
     </div>
-    <!-- /. NAV TOP  -->
-    <nav class="navbar-default navbar-side" role="navigation">
-      <div class="sidebar-collapse">
-        <ul class="nav" id="main-menu">
-          <li class="active-link">
-            <a href="index.html"><i class="fa fa-desktop "></i>Dashboard <span class="badge">Included</span></a>
-          </li>
-          <li>
-            <a href="ui.html"><i class="fa fa-table "></i>user <span class="badge">Included</span></a>
-          </li>
-          <li>
-            <a href="blank.html"><i class="fa fa-edit "></i>common_code <span class="badge">Included</span></a>
-          </li>
-          <li>
-            <a href="blank.html"><i class="fa fa-edit "></i>post <span class="badge">Included</span></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <!-- /. NAV SIDE  -->
-    <div id="page-wrapper">
-      <div id="page-inner">
-        <div class="row">
-          <div class="col-lg-12">
-            <h2>ADMIN DASHBOARD</h2>
-          </div>
-        </div>
-        <!-- /. ROW  -->
-        <hr />
-        <div class="row">
-          <div class="col-lg-12 ">
-            <div class="alert alert-info">
-              <strong>Welcome Jhon Doe ! </strong> You Have No pending Task For Today.
-            </div>
-          </div>
-        </div>
-        <!-- /. ROW  -->
-        <div class="row text-center pad-top">
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-            <div class="div-square">
-              <a href="blank.html">
-                <i class="fa fa-users fa-5x"></i>
-                <h4>See Users</h4>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-            <div class="div-square">
-              <a href="blank.html">
-                <i class="fa fa-key fa-5x"></i>
-                <h4>Admin </h4>
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
-            <div class="div-square">
-              <a href="blank.html">
-                <i class="fa fa-comments-o fa-5x"></i>
-                <h4>Support</h4>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- /. ROW  -->
-        <div class="row">
-          <div class="col-lg-12 ">
-            <br />
-            <!-- <div class="alert alert-danger" aria-disabled="true">
-              <strong>Want More Icons Free ? </strong> Checkout fontawesome website and use any icon <a target="_blank"
-                href="http://fortawesome.github.io/Font-Awesome/icons/">Click Here</a>.
-            </div> -->
-          </div>
-        </div>
-        <!-- /. ROW  -->
-      </div>
-      <!-- /. PAGE INNER  -->
-    </div>
-    <!-- /. PAGE WRAPPER  -->
+    <!-- / main  -->
+
+    <!-- navigation -->
+    <navigation></navigation>
+    <!-- / navigation -->
+    
+    <!-- dashboard -->
+    <router-outlet></router-outlet>
+    <!-- / dashboard -->
+
   </div>
+  <!-- footer -->
   <div class="footer">
     <div class="row">
       <div class="col-lg-12">
@@ -107,4 +41,5 @@
       </div>
     </div>
   </div>
+  <!-- / footer -->
 </body>
