유저 화면 추가 1. 유저 화면 2. 공통코드 사용 서비스 추가

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,16 +2,16 @@
   <div class="sidebar-collapse">
     <ul class="nav" id="main-menu">
       <li class="active-link">
-        <a href="index.html"><i class="fa fa-desktop "></i>Dashboard <span class="badge">Included</span></a>
+        <a [routerLink]="['/dashboard']"><i class="fa fa-desktop "></i>Dashboard </a>
       </li>
       <li>
-        <a href="ui.html"><i class="fa fa-table "></i>user <span class="badge">Included</span></a>
+        <a [routerLink]="['/users']"><i class="fa fa-table "></i>Users </a>
       </li>
       <li>
-        <a href="blank.html"><i class="fa fa-edit "></i>common_code <span class="badge">Included</span></a>
+        <a href="blank.html"><i class="fa fa-table "></i>Common_code </a>
       </li>
       <li>
-        <a href="blank.html"><i class="fa fa-edit "></i>post <span class="badge">Included</span></a>
+        <a href="blank.html"><i class="fa fa-table "></i>Post </a>
       </li>
     </ul>
   </div>
