--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,7 +10,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" [routerLink]="['/dashboard']">
             <img src="../../favicon.ico"/>
           </a>
         </div>
@@ -29,7 +29,11 @@
     <!-- / navigation -->
     
     <!-- dashboard -->
-    <router-outlet></router-outlet>
+    <div id="page-wrapper">
+      <div id="page-inner">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
     <!-- / dashboard -->
 
   </div>
