--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -8,7 +8,7 @@
         <a [routerLink]="['/users']"><i class="fa fa-table "></i>Users </a>
       </li>
       <li>
-        <a href="blank.html"><i class="fa fa-table "></i>Common_code </a>
+        <a [routerLink]="['/common_code']"><i class="fa fa-table "></i>Common_code </a>
       </li>
       <li>
         <a href="blank.html"><i class="fa fa-table "></i>Post </a>
