--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -11,7 +11,7 @@
         <a [routerLink]="['/common_code']"><i class="fa fa-table "></i>Common_code </a>
       </li>
       <li>
-        <a href="blank.html"><i class="fa fa-table "></i>Post </a>
+        <a [routerLink]="['/post']"><i class="fa fa-table "></i>Post </a>
       </li>
     </ul>
   </div>
