--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -30,7 +30,7 @@
   </div>
   <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6">
     <div class="div-square">
-      <a href="blank.html">
+      <a [routerLink]="['/post']">
         <i class="fa fa-comments-o fa-5x"></i>
         <h4>Post</h4>
       </a>
